# uiRatatui_Coingeko_api

./: .env  Cargo.toml  README.md  consulta.txt
src/: api_call.rs  coin_stdin.rs  config.rs  main.rs  ui.rs  vista.rs
